# stophammer

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.deploy  README.md  api.html  deny.toml  docker-compose.yml  install.sh  stophammer.env.example
.github/workflows/: ci.yml  release.yml
docs/: API.md  api-backed-review-tui-plan.md  api-refactor-plan.md  gossip-archive-catchup-plan.md  ideas.md  identity-evidence-policy.md  importer-attempt-memory-plan.md  importer-review-findings.md  musicl-backfill-plan.md  operations.md  packaging-plan.md  pre-sprint-audit.md  primary-diagnostics-plan.md  primary-resolved-replication-plan.md  resolution_cleanup_plan.md  resolver-refactor-plan.md  resolver-tui-rollout-plan.md  rust-dev-audit.md  schema-reference.md  security-guidelines.md  user-guide.md  verifier-guide.md  wallet-entity-plan.md
docs/adr/: 0001-record-architecture-decisions.md  0002-rust-static-binary-core.md  0003-sqlite-wal-primary-store.md  0004-signed-event-log.md  0005-pluggable-verifier-chain.md  0006-crawlers-as-untrusted-clients.md  0007-cloudflare-tracker-bootstrap.md  0009-community-node-mode.md  0012-podping-listener.md  0013-bulk-importer.md  0014-artist-resolution-aliases.md  0015-verifier-plugin-architecture.md  0016-push-gossip-tracker-elimination.md  0017-canonical-rss-parser-crate.md  0018-proof-of-possession-mutations.md  0019-tls-acme-let-s-encrypt.md  0020-sse-artist-follow-notifications.md  0021-live-events.md  0022-fts5-search-architecture.md  0023-schema-migrations.md  0024-sqlite-wal-connection-pool.md  README.md  (+16 more)
man/: backfill_artist_identity.1  backfill_canonical.1  backfill_wallets.1  resolverctl.1  resolverd.1  review_artist_identity.1  review_artist_identity_tui.1  review_source_claims_tui.1  review_wallet_identity.1  review_wallet_identity_tui.1  stophammer-resolverctl.1  stophammer-resolverd.1  stophammer.1
migrations/: 0001_baseline.sql  0002_artist_credit_feed_scope.sql  0003_search_entities_unique.sql  0004_proof_level.sql  0005_live_events_and_remote_items.sql  0006_source_claim_staging.sql  0007_source_link_and_release_claims.sql  0008_source_contributor_role_norm.sql  0009_source_item_enclosures.sql  0010_source_platform_claims.sql  0011_canonical_release_recording.sql  0012_resolver_queue.sql  0013_artist_identity_reviews.sql  0014_resolved_overlay_tables.sql  0015_live_events_feed_scoped_key.sql  0016_wallet_entities.sql  0017_wallet_force_confidence_override.sql  0018_wallet_merge_apply_batches.sql  0019_feed_delete_cleanup_triggers.sql  0020_artist_credit_null_scope_dedup.sql  0021_route_custom_value_normalization.sql  0022_wallet_route_delete_triggers.sql  0023_wallet_identity_review_normalization.sql  0024_wallet_review_status_parity.sql  0025_source_first_feed_track_fields.sql  0026_drop_canonical_release_recording_tables.sql  0027_add_track_publisher_text.sql  0028_source_item_transcripts.sql  0029_track_remote_items.sql  0030_drop_wallet_tables.sql  0031_track_artist_lower_index.sql  0032_feed_scoped_track_identity.sql
packaging/: README.md
scripts/: assemble-release.sh  build-arch-packages.sh  preview-docs.sh  publish-release.sh  verify-arch-packages.sh  verify-release.sh
src/: api.rs  apply.rs  community.rs  db.rs  db_pool.rs  event.rs  ingest.rs  lib.rs  main.rs  medium.rs  model.rs  openapi.rs  proof.rs  quality.rs  query.rs  resolver_coordination.rs  review_backend.rs  schema.sql  search.rs  signing.rs  sync.rs  tls.rs  tui.rs  verify.rs
tests/: admin_diagnostics_tests.rs  adr0038_tests.rs  api_canonical_query_tests.rs  api_docs_tests.rs  apply_atomicity_tests.rs  apply_batch_tests.rs  apply_tests.rs  artist_credit_tests.rs  artist_identity_tests.rs  auth_atomicity_tests.rs  availability_tests.rs  catchup_drain_tests.rs  clock_tests.rs  community_discovery_security_tests.rs  community_startup_tests.rs  community_sync_auth_env_tests.rs  community_sync_resilience_tests.rs  cors_tests.rs  coverage_gap_tests.rs  crawl_token_verifier_tests.rs  crypto_security_tests.rs  cs01_rss_verification_tests.rs  cs02_constant_time_tests.rs  cs03_sync_auth_tests.rs  db_error_propagation_tests.rs  db_pool_tests.rs  db_tests.rs  dead_schema_tests.rs  debug_contract_tests.rs  e2e_docker_compose_tests.sh  e2e_docker_test.sh  e2e_tests.rs  event_tests.rs  external_id_tests.rs  feed_track_inheritance_tests.rs  fg01_tracing_tests.rs  fg02_sse_tests.rs  fg05_community_peers_tests.rs  finding2_atomicity_tests.rs  finding3_sync_token_tests.rs  (+73 more)
(+75 files in other folders)
